--- a/posSystem/Views/Shared/_Layout.cshtml
+++ b/posSystem/Views/Shared/_Layout.cshtml
@@ -70,6 +70,8 @@
                         <a class="collapse-item" asp-area="" asp-controller="Brand" asp-action="Index">3. Brand</a>
                         <a class="collapse-item" asp-area="" asp-controller="SubBrand" asp-action="Index">4. Sub Brand</a>
                         <a class="collapse-item" asp-area="" asp-controller="Item" asp-action="Index">5. Item</a>
+                        <a class="collapse-item" asp-area="" asp-controller="Discount" asp-action="Index">6. Discount</a>
+                        <a class="collapse-item" asp-area="" asp-controller="Promotion" asp-action="Index">7. Promotion</a>
                     </div>
                 </div>
             </li>
