--- a/posSystem/Views/Shared/_Layout.cshtml
+++ b/posSystem/Views/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@
                 <div id="collapseAdmin" class="collapse" aria-labelledby="headingAdmin" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" asp-area="" asp-controller="Admin" asp-action="Index">1. Admin</a>
-                        <a class="collapse-item" asp-area="" asp-controller="" asp-action="">2. Member</a>
+                        <a class="collapse-item" asp-area="" asp-controller="Member" asp-action="Index">2. Member</a>
                         <a class="collapse-item" asp-area="" asp-controller="Staff" asp-action="Index">3. Staff</a>
                     </div>
                 </div>
