--- a/posSystem/Views/Discount/DiscountEdit.cshtml
+++ b/posSystem/Views/Discount/DiscountEdit.cshtml
@@ -13,6 +13,11 @@
                     </div>
 
                     <div class="mb-3">
+                        <label for="disValue" class="form-label">Value (Only no like 1 or 2 or 3 or 10 or 20)</label>
+                        <input type="text" class="form-control" id="disValue" name="disValue" placeholder="Enter Value" value="@Model.disValue">
+                    </div>
+
+                    <div class="mb-3">
                         <label for="disDescription" class="form-label">Discount Description</label>
                         <textarea class="form-control" id="disDescription" name="disDescription" rows="3" placeholder="Enter discount description">@Model.disDescription</textarea>
                     </div>
@@ -33,11 +38,13 @@
             $('#btnUpdate').click(function () {
                 let disId = @Model.disId; // Ensure this is the correct value
                 let disName = $('#disName').val();
+                let disValue = $('#disValue').val();
                 let disDescription = $('#disDescription').val();
 
                 let _reqModel = {
                     disId: disId,
                     disName: disName,
+                    disValue: disValue,
                     disDescription: disDescription
                 };
 
