--- a/posSystem/Views/Discount/DiscountIndex.cshtml
+++ b/posSystem/Views/Discount/DiscountIndex.cshtml
@@ -36,6 +36,7 @@
                     Discount Name @(_sortField == "disName" ? (_sortOrder == "asc" ? "▲" : "▼") : "")
                 </a>
             </th>
+            <th scope="col">Value</th>
             <th scope="col">Discount Description</th>
             <th scope="col">Create Date</th>
             <th scope="col">Update Date</th>
@@ -50,6 +51,7 @@
             <tr>
                 <th scope="row">@(++count + (_pageNo - 1) * _pageSize)</th>
                 <td>@item.disName</td>
+                <td>@item.disValue</td>
                 <td>@item.disDescription</td>
                 <td>@item.disCreateAt</td>
                 <td>@item.disUpdateAt</td>
