--- a/posSystem/Views/Sale/SaleIndex.cshtml
+++ b/posSystem/Views/Sale/SaleIndex.cshtml
@@ -19,7 +19,7 @@
     <h1 class="h3 mb-4 mb-sm-0">Sale Management</h1>
     <div>
         <a href="/Sale/Create" class="btn btn-success mr-2">
-            <i class="fas fa-plus-circle"></i> Download Report
+            <i class="fas fa-download"></i> Download Report
         </a>
     </div>
 </div>
@@ -42,6 +42,7 @@
             <th scope="col">Member Code</th>
             <th scope="col">Member Name</th>
             <th scope="col">Sale Date</th>
+            <th></th>
 
         </tr>
     </thead>
