--- a/posSystem/Views/Login/Index.cshtml
+++ b/posSystem/Views/Login/Index.cshtml
@@ -18,12 +18,12 @@
                 <div class="form-group">
                     <input type="password" class="form-control form-control-user" id="adminPassword" name="adminPassword" placeholder="Password">
                 </div>
-                <div class="form-group">
+@*                 <div class="form-group">
                     <div class="custom-control custom-checkbox small">
                         <input type="checkbox" class="custom-control-input" id="rememberMe" name="rememberMe" value="true">
                         <label class="custom-control-label" for="rememberMe">Remember Me</label>
                     </div>
-                </div>
+                </div> *@
                 <button type="submit" class="btn btn-primary btn-user btn-block" id="btnLogin">
                     Login
                 </button>
