--- a/posSystem/Views/Shared/_Layout.cshtml
+++ b/posSystem/Views/Shared/_Layout.cshtml
@@ -118,6 +118,21 @@
                 </div>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseRecord" aria-expanded="true" aria-controls="collapseRecord">
+                    <i class="fas fa-book"></i>
+                    <span>Login Records</span>
+                </a>
+                <div id="collapseRecord" class="collapse" aria-labelledby="headingRecord" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" asp-area="" asp-controller="Record" asp-action="Index">
+                            <span>1. Staff Login History</span>
+                        </a>
+                    </div>
+                </div>
+            </li>
+
+
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
