--- a/posSystem/Views/Brand/MassUpload.cshtml
+++ b/posSystem/Views/Brand/MassUpload.cshtml
@@ -54,6 +54,8 @@
                 let formData = new FormData();
                 formData.append('file', file);
 
+                Notiflix.Block.dots('body');
+
                 // Perform AJAX file upload
                 $.ajax({
                     url: url,
@@ -62,6 +64,7 @@
                     contentType: false,
                     processData: false,
                     success: function (result) {
+                        Notiflix.Block.remove('.container'); // Remove block on success
                         if (result.IsSuccess) {
                             Swal.fire({
                                 title: "Success!",
@@ -81,6 +84,7 @@
                         }
                     },
                     error: function (xhr, status, error) {
+                        Notiflix.Block.remove('.container'); // Remove block on error
                         Swal.fire({
                             title: "Error!",
                             text: "An error occurred while processing the file.",
