--- a/posSystem/Views/Member/MemberIndex.cshtml
+++ b/posSystem/Views/Member/MemberIndex.cshtml
@@ -45,6 +45,7 @@
             <th scope="col">Create Date</th>
             <th scope="col">Update Date</th>
             <th scope="col">Update Count</th>
+            <th scope="col">Photo</th>
             <th scope="col">Action</th>
         </tr>
     </thead>
