--- a/posSystem/Views/SubBrand/MassUpload.cshtml
+++ b/posSystem/Views/SubBrand/MassUpload.cshtml
@@ -58,6 +58,9 @@
                 let formData = new FormData();
                 formData.append('file', file);
 
+                // Block the element with Notiflix
+                Notiflix.Block.dots('body');
+
                 // Perform AJAX file upload
                 $.ajax({
                     url: url,
@@ -66,6 +69,7 @@
                     contentType: false,
                     processData: false,
                     success: function (result) {
+                        Notiflix.Block.remove('.container'); // Remove block on success
                         if (result.IsSuccess) {
                             Swal.fire({
                                 title: "Success!",
@@ -86,6 +90,7 @@
                     },
                     error: function (xhr, status, error) {
                         Swal.fire({
+                            Notiflix.Block.remove('.container'); // Remove block on error
                             title: "Error!",
                             text: "An error occurred while processing the file.",
                             icon: "error"
