--- a/posSystem/Views/SubCategory/MassUpload.cshtml
+++ b/posSystem/Views/SubCategory/MassUpload.cshtml
@@ -65,6 +65,9 @@
                 let formData = new FormData();
                 formData.append('file', file);
 
+                // Block the element with Notiflix
+                Notiflix.Block.dots('body');
+
                 // Perform AJAX file upload
                 $.ajax({
                     url: url,
@@ -73,6 +76,7 @@
                     contentType: false,
                     processData: false,
                     success: function (result) {
+                        Notiflix.Block.remove('.container'); // Remove block on success
                         if (result.IsSuccess) {
                             Swal.fire({
                                 title: "Success!",
@@ -92,6 +96,7 @@
                         }
                     },
                     error: function (xhr, status, error) {
+                        Notiflix.Block.remove('.container'); // Remove block on error
                         Swal.fire({
                             title: "Error!",
                             text: "An error occurred while processing the file.",
